--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Compiled class file
+# Compiled class file https://git-scm.com/docs/gitignore
 *.class
-
+#https://git-scm.com/docs/gitignore
 # Log file
 *.log
 
@@ -26,7 +26,3 @@ hs_err_pid*
 replay_pid*
 /.idea/misc.xml
 /.idea
-
-
-
-
